Fix form's labels partialy hidden when too long A line break and an hyphen are now used when needed

--- a/lizmap/www/assets/css/map.css
+++ b/lizmap/www/assets/css/map.css
@@ -959,6 +959,10 @@ div.modal div.control-group {
 #dock .form-horizontal .control-label,
 div.modal .form-horizontal .control-label {
   width: 90px;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
 }
 
 
